# open-data-pipeline

./: .env  .flake8  .gitignore  404.html  CITATION.cff  LICENSE  README.md  config.json  config_actual.json  drug-run.sh  drug_runner.sh  for-drug-test.csv  geocode.py  index.html  insert_original.py  justfile  lookup_data.json  milwaukee.json  mkdocs.yml  models.py  notes.md  objects.inv  prepare_drugs.py  pyproject.toml  sample.py  tag_drugs.py  test.json  test2.json  update_drugs.py  update_records.py
.devcontainer/: devcontainer.json
.github/actions/: action.yaml
.github/workflows/: deploy.yml  docker-image.yml  main.yml  pipeline.yaml  pipeline.yml  publish.yml
config/: cook-county.yaml
containers/: cli.Dockerfile  drug_pipeline.Dockerfile  linux_cli.Dockerfile  linux_pipeline.Dockerfile  pipeline.Dockerfile  rust-python.Dockerfile
data/: cuyahoga_records.csv  database.db  pima_records.csv
data/db/: cook_county.json
data/new/: cook_county_golang.json
data/pima_county/: running.csv
data/records/cook_county/: 2022-09-03.json  hi.json
docs/: index.md
docs/reference/: analyze.md  extract_drugs.md  fetch.md  geocode.md  index.md  main.md  manage_config.md  spatial_join.md  utils.md
license/: index.html
opendata_pipeline/: models.py
reference/: index.html
reference/analyze/: index.html
reference/extract_drugs/: index.html
reference/fetch/: index.html
reference/geocode/: index.html
reference/main/: index.html
reference/manage_config/: index.html
reference/utils/: index.html
scripts/: bump_version.sh  combine_pima.sh  fetch_data.py  fetch_data.sh  live_cli.sh  live_cli_test.sh  prepare_data_release.sh  profile.sh  profile_datasets.py  publish.sh  release.sh  workflow.sh
search/: search_index.json
src/opendata_pipeline/: __init__.py  __main__.py  analyze.py  extract_drugs.py  fetch.py  geocode.py  main.py  manage_config.py  models.py  spatial_join.py  utils.py
