[tool.poetry]
name = "opendata-pipeline"
version = "0.2.1"
description = "A pipeline for processing open medical examier's data using GitHub Actions CI/CD."
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "opendata_pipeline", from = "src" },
]

[tool.poetry.scripts]
opendata-pipeline = "opendata_pipeline:app"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
aiohttp = "^3.8.1"
pandas = "^1.4.4"
typer = "^0.6.1"
requests = "^2.28.1"
orjson = "^3.8.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
mkdocstrings = {extras = ["python"], version = "^0.19.0"}


[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"
ipykernel = "^6.15.2"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.4"
mkdocstrings = "^0.19.0"


[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
