[project]
name = "opendata-pipeline"
version = "0.3.3"
description = "A pipeline for processing open medical examier's data using GitHub Actions CI/CD."
authors = [{name ="Nick Anthony", email = "nanthony007@gmail.com"}]
license = "MIT"
readme = "README.md"


requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "httpx>=0.27.2",
    "orjson>=3.10.11",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "rich>=13.9.4",
    "rtree>=1.3.0",
    "typer>=0.13.0",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.44",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.27.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
opendata-pipeline = "opendata_pipeline.main:app"


